--- a/index.html
+++ b/index.html
@@ -2509,6 +2509,9 @@ async function setup() {
                 'blue',
                 'blue',
                 'blue',
+                'blue',
+                'blue',
+                'blue',
                 'blue'
             ],
             borderColor: [
